# vision

./: DEPLOY.md  README.md  itsl_mirror.env.example  itsl_mirror.service
backend/app/: dual_store.py  main.py  nedb_store.py  sqlite_store.py
backend/app/indexer/: nedb_backfill.py
backend/app/routes/: health.py
backend/scripts/: itsl_mirror.py  migrate_sqlite_to_nedb.py
tools/nedb-migrator/: Cargo.toml
tools/nedb-migrator/src/: main.rs
web/src/components/: logo.tsx  node-syncing.tsx
